--- a/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli.ipynb
@@ -148,7 +148,7 @@
     "\n",
     "\n",
     "Total['Average Price'] = Total['Average Price'].map(\"${0:,.2f}\".format)\n",
-    "Total['Total Revenue'] = Total['Total Revenue'].map(\"${0:,.2f}\".format)\n",
+    "# Total['Total Revenue'] = Total['Total Revenue'].map(\"${0:,.2f}\".format)\n",
     "Total"
    ]
   },
